// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hue renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-hue hue-picker"
    style="width: 316px; height: 16px;"
  >
    <div
      class="rc-hue-control"
      style="border-radius: 2px;"
    >
      <div
        class="rc-hue-control__container"
        style="border-radius: 2px; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
      >
        <div
          class="rc-hue-control__pointer"
          style="left: 69.44444444444443%;"
        >
          <div
            class="rc-hue__pointer"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Hue renders vertically 1`] = `
<DocumentFragment>
  <div
    class="rc-hue hue-picker"
    style="width: 20px; height: 200px;"
  >
    <div
      class="rc-hue-control rc-hue-control--vertical"
      style="border-radius: 2px;"
    >
      <div
        class="rc-hue-control__container"
        style="border-radius: 2px; background: linear-gradient(to top, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
      >
        <div
          class="rc-hue-control__pointer"
          style="left: 0px; top: 30.55555555555557%;"
        >
          <div
            class="rc-hue__pointer rc-hue__pointer--vertical"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HuePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-hue__pointer"
  />
</DocumentFragment>
`;
